不足分の追加と表記の統一

--- a/views/cars_detail.ejs
+++ b/views/cars_detail.ejs
@@ -18,5 +18,7 @@
     </table>
     <br>
     <a href="/cars">一覧に戻る</a>
+    <br><br>
+    <a href="/cars/edit/<%= data.id - 1 %>">このデータを編集する</a>
 </body>
 </html>
