--- a/views/starwars_edit.ejs
+++ b/views/starwars_edit.ejs
@@ -16,7 +16,7 @@
       <tr><td>初登場作品</td><td><input type="text" name="appearance" value="<%= data.appearance %>"></td></tr>
       <tr><td>主な所有者</td><td><input type="text" name="owners_pilots" value="<%= data.owners_pilots %>"></td></tr>
     </table>
-    <input type="submit" value="登録">
+    <input type="submit" value="更新を保存">
   </form>
   <br>
   <a href="/starwars">一覧に戻る</a>
