--- a/views/tf_detail.ejs
+++ b/views/tf_detail.ejs
@@ -18,5 +18,7 @@
     </table>
     <br>
     <a href="/transformers">一覧に戻る</a>
+    <br><br>
+    <a href="/transformers/edit/<%= data.id - 1 %>">このデータを編集する</a>
 </body>
 </html>
