--- a/views/starwars_list.ejs
+++ b/views/starwars_list.ejs
@@ -7,7 +7,7 @@
 <body>
     <h2>宇宙船一覧</h2>
     <table>
-        <tr><th>ID</th><th>英語名</th><th>日本語名</th><th>詳細</th><th>編集</th></tr>
+        <tr><th>ID</th><th>英語名</th><th>日本語名</th><th>詳細</th><th>編集</th><th>削除</th></tr>
         <% let i = 0; %>
         <% for( let row of data ) { %>
         <tr>
@@ -16,6 +16,7 @@
             <td><%= row.name_jp %></td>
             <td><a href="/starwars/<%= i %>">詳細</a></td>
             <td><a href="/starwars/edit/<%= i %>">編集</a></td>
+            <td><a href="/starwars/delete/<%= i %>" onclick="return confirm('本当に削除しますか？');">削除</a></td>
         </tr>
         <% i++; %>
         <% } %>
