--- a/views/tf_list.ejs
+++ b/views/tf_list.ejs
@@ -7,7 +7,7 @@
 <body>
     <h2>トランスフォーマー 一覧</h2>
     <table>
-        <tr><th>ID</th><th>英語名</th><th>日本語名</th><th>陣営</th><th>詳細</th><th>編集</th></tr>
+        <tr><th>ID</th><th>英語名</th><th>日本語名</th><th>陣営</th><th>詳細</th><th>編集</th><th>削除</th></tr>
         <% let i = 0; %>
         <% for( let row of data ) { %>
         <tr>
@@ -17,11 +17,12 @@
             <td><%= row.faction %></td>
             <td><a href="/transformers/<%= i %>">詳細</a></td>
             <td><a href="/transformers/edit/<%= i %>">編集</a></td>
+            <td><a href="/transformers/delete/<%= i %>" onclick="return confirm('本当に削除しますか？');">削除</a></td>
         </tr>
         <% i++; %>
         <% } %>
     </table>
     <br>
-    <a href="/public/tf_add.html">新規個体の登録はこちら</a>
+    <a href="/public/tf_add.html">新規追加はこちら</a>
 </body>
 </html>
